--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Giới thiệu - Đặng Phú Duy</title>
+</head>
+<body>
+    <h1>Đặng Phú Duy</h1>
+    <p>Tôi là Đặng Phú Duy, đến từ Kiên Giang, hiện đang là sinh viên trường Đại học Công nghệ Thông tin - ĐHQG TP.HCM.</p>
+    <p>Tôi từng đạt được giải Nhì HSGQG môn Tin học.</p>
+    <p>Sở thích của tôi là bóng đá.</p>
+    <p>Nghề nghiệp mơ ước của tôi là trong tương lai sẽ làm trong bộ phận Nghiên cứu & Phát triển của một công ty công nghệ lớn.</p>
+</body>
+</html>
