--- a/index.html
+++ b/index.html
@@ -1,15 +1,228 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giới thiệu - Đặng Phú Duy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DSAI</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+
+
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background-color: #f0f2f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 30px 15px;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    .chat-container {
+      background: #ffffff;
+      width: 100%;
+      max-width: 600px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    .header {
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .chat {
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+      height: 400px;
+      overflow-y: auto;
+      background-color: #f9f9f9;
+    }
+
+    .message {
+      padding: 10px 14px;
+      margin: 8px 0;
+      border-radius: 18px;
+      max-width: 70%;
+      clear: both;
+      line-height: 1.4;
+    }
+
+    .user {
+      align-self: flex-end;
+      background-color: #d0e6ff;
+      color: #004085;
+      border-top-right-radius: 0;
+    }
+
+    .bot {
+      align-self: flex-start;
+      background-color: #d4edda;
+      color: #155724;
+      border-top-left-radius: 0;
+    }
+
+    .input-area {
+      display: flex;
+      padding: 10px;
+      border-top: 1px solid #ddd;
+      background-color: #fff;
+    }
+
+    .input-area input {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin-right: 10px;
+      font-size: 16px;
+    }
+
+    .input-area button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .input-area button:hover {
+      background-color: #0056b3;
+    }
+
+    select, .header button {
+      padding: 6px 10px;
+      font-size: 14px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    .header button {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      margin-left: 10px;
+    }
+
+    .header button:hover {
+      background-color: #218838;
+    }
+  </style>
 </head>
 <body>
-    <h1>Đặng Phú Duy</h1>
-    <p>Tôi là Đặng Phú Duy, đến từ Kiên Giang, hiện đang là sinh viên trường Đại học Công nghệ Thông tin - ĐHQG TP.HCM.</p>
-    <p>Tôi từng đạt được giải Nhì HSGQG môn Tin học.</p>
-    <p>Sở thích của tôi là bóng đá.</p>
-    <p>Nghề nghiệp mơ ước của tôi là trong tương lai sẽ làm trong bộ phận Nghiên cứu & Phát triển của một công ty công nghệ lớn.</p>
+  <h2>
+    <img src="logo/logo.png" alt="Logo" style="width: 100px; height: 100px; vertical-align: middle; margin-right: 10px;">
+  </h2>
+
+  <div class="chat-container">
+    <div class="header">
+      <div>
+        <label for="sessionList">Session:</label>
+        <select id="sessionList" onchange="loadSession()">
+          <option value="default">Default</option>
+        </select>
+      </div>
+      <button onclick="createNewSession()">+ Tạo Mới</button>
+    </div>
+
+    <div id="chat" class="chat"></div>
+
+    <div class="input-area">
+      <input type="text" id="input" placeholder="Nhập tin nhắn..."/>
+      <button onclick="sendMessage()">Gửi</button>
+    </div>
+  </div>
+
+  <script>
+    const chat = document.getElementById('chat');
+    const input = document.getElementById('input');
+    const sessionList = document.getElementById('sessionList');
+    
+    let currentSession = 'default';
+    let chatSessions = {
+      'default': []
+    };
+
+    function createNewSession() {
+      const newSessionId = prompt("Nhập tên session mới:");
+      if (newSessionId && !chatSessions[newSessionId]) {
+        chatSessions[newSessionId] = [];
+        const option = document.createElement('option');
+        option.value = newSessionId;
+        option.textContent = newSessionId;
+        sessionList.appendChild(option);
+        selectSession(newSessionId);
+      } else {
+        alert("Session đã tồn tại hoặc tên không hợp lệ.");
+      }
+    }
+
+    function selectSession(sessionId) {
+      currentSession = sessionId;
+      loadSession();
+    }
+
+    function loadSession() {
+      currentSession = sessionList.value;
+      chat.innerHTML = '';
+      if (chatSessions[currentSession]) {
+        chatSessions[currentSession].forEach(msg => {
+          addMessage(msg.sender, msg.text);
+        });
+      }
+    }
+
+    async function sendMessage() {
+      const message = input.value.trim();
+      if (!message) return;
+
+      addMessage('user', message);
+      chatSessions[currentSession].push({ sender: 'user', text: message });
+      input.value = '';
+
+      try {
+        const response = await fetch('https://15ff-34-124-158-126.ngrok-free.app/chat', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ message })
+        });
+
+        const data = await response.json();
+        const botReply = data.reply || '[Không có phản hồi]';
+        addMessage('bot', botReply);
+        chatSessions[currentSession].push({ sender: 'bot', text: botReply });
+      } catch (error) {
+        addMessage('bot', '[Lỗi kết nối đến API]');
+        console.error(error);
+      }
+    }
+
+    function addMessage(sender, text) {
+      const msgDiv = document.createElement('div');
+      msgDiv.className = 'message ' + sender;
+      msgDiv.textContent = text;
+      chat.appendChild(msgDiv);
+      chat.scrollTop = chat.scrollHeight;
+    }
+
+    input.addEventListener('keydown', function(e) {
+      if (e.key === 'Enter') sendMessage();
+    });
+  </script>
 </body>
 </html>
