--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DSAI</title>
+  <!-- Link đến font Roboto từ Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
+    /* ===== TOÀN BỘ PHẦN GIAO DIỆN ===== */
 
-
+    /* Cài đặt mặc định cho body */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -18,11 +20,13 @@
       padding: 30px 15px;
     }
 
+    /* Tiêu đề */
     h2 {
       margin-bottom: 20px;
       color: #333;
     }
 
+    /* Khung chứa toàn bộ giao diện chat */
     .chat-container {
       background: #ffffff;
       width: 100%;
@@ -34,6 +38,7 @@
       overflow: hidden;
     }
 
+    /* Thanh đầu (header) của chat */
     .header {
       padding: 15px;
       border-bottom: 1px solid #ddd;
@@ -42,6 +47,7 @@
       align-items: center;
     }
 
+    /* Khu vực chứa tin nhắn */
     .chat {
       display: flex;
       flex-direction: column;
@@ -51,6 +57,7 @@
       background-color: #f9f9f9;
     }
 
+    /* Tin nhắn */
     .message {
       padding: 10px 14px;
       margin: 8px 0;
@@ -60,6 +67,7 @@
       line-height: 1.4;
     }
 
+    /* Tin nhắn của người dùng */
     .user {
       align-self: flex-end;
       background-color: #d0e6ff;
@@ -67,6 +75,7 @@
       border-top-right-radius: 0;
     }
 
+    /* Tin nhắn của bot */
     .bot {
       align-self: flex-start;
       background-color: #d4edda;
@@ -74,6 +83,7 @@
       border-top-left-radius: 0;
     }
 
+    /* Khu nhập liệu */
     .input-area {
       display: flex;
       padding: 10px;
@@ -81,6 +91,7 @@
       background-color: #fff;
     }
 
+    /* Ô input cho người dùng */
     .input-area input {
       flex: 1;
       padding: 10px;
@@ -90,6 +101,7 @@
       font-size: 16px;
     }
 
+    /* Nút gửi tin nhắn */
     .input-area button {
       background-color: #007bff;
       color: white;
@@ -103,6 +115,7 @@
       background-color: #0056b3;
     }
 
+    /* Select và nút trong header */
     select, .header button {
       padding: 6px 10px;
       font-size: 14px;
@@ -123,11 +136,14 @@
   </style>
 </head>
 <body>
+  <!-- Tiêu đề có chứa logo -->
   <h2>
     <img src="logo/logo.png" alt="Logo" style="width: 100px; height: 100px; vertical-align: middle; margin-right: 10px;">
   </h2>
 
+  <!-- Khung chat -->
   <div class="chat-container">
+    <!-- Thanh header với dropdown session và nút tạo session mới -->
     <div class="header">
       <div>
         <label for="sessionList">Session:</label>
@@ -138,8 +154,10 @@
       <button onclick="createNewSession()">+ Tạo Mới</button>
     </div>
 
+    <!-- Khu chat chính -->
     <div id="chat" class="chat"></div>
 
+    <!-- Ô nhập liệu và nút gửi -->
     <div class="input-area">
       <input type="text" id="input" placeholder="Nhập tin nhắn..."/>
       <button onclick="sendMessage()">Gửi</button>
@@ -147,6 +165,7 @@
   </div>
 
   <script>
+    // ==== BIẾN VÀ KHỞI TẠO ====
     const chat = document.getElementById('chat');
     const input = document.getElementById('input');
     const sessionList = document.getElementById('sessionList');
@@ -156,6 +175,9 @@
       'default': []
     };
 
+    /**
+     * Hàm tạo session mới nếu tên hợp lệ và chưa tồn tại
+     */
     function createNewSession() {
       const newSessionId = prompt("Nhập tên session mới:");
       if (newSessionId && !chatSessions[newSessionId]) {
@@ -170,11 +192,17 @@
       }
     }
 
+    /**
+     * Hàm chọn session hiện tại và load nội dung
+     */
     function selectSession(sessionId) {
       currentSession = sessionId;
       loadSession();
     }
 
+    /**
+     * Hàm load lại toàn bộ tin nhắn từ session đang chọn
+     */
     function loadSession() {
       currentSession = sessionList.value;
       chat.innerHTML = '';
@@ -185,6 +213,9 @@
       }
     }
 
+    /**
+     * Gửi tin nhắn từ người dùng và gọi API để nhận phản hồi từ bot
+     */
     async function sendMessage() {
       const message = input.value.trim();
       if (!message) return;
@@ -194,7 +225,7 @@
       input.value = '';
 
       try {
-        const response = await fetch('https://15ff-34-124-158-126.ngrok-free.app/chat', {
+        const response = await fetch('https://14ba-34-125-239-255.ngrok-free.app/chat', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -212,6 +243,9 @@
       }
     }
 
+    /**
+     * Thêm một tin nhắn vào khung chat
+     */
     function addMessage(sender, text) {
       const msgDiv = document.createElement('div');
       msgDiv.className = 'message ' + sender;
@@ -220,6 +254,7 @@
       chat.scrollTop = chat.scrollHeight;
     }
 
+    // Gửi tin khi nhấn Enter
     input.addEventListener('keydown', function(e) {
       if (e.key === 'Enter') sendMessage();
     });
