--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       showLoader();
 
       try {
-        const response = await fetch('https://14ba-34-125-239-255.ngrok-free.app/chat', {
+        const response = await fetch('https://1fef-34-16-218-196.ngrok-free.app/chat', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
